force-app/main/default/objects/POC_Product_Picker_Field__mdt/POC_Product_Picker_Field__mdt.object-meta.xml
<CustomObject>
    <label>POC Product Picker Field</label>
    <pluralLabel>POC Product Picker Fields</pluralLabel>
</CustomObject>