force-app/main/default/objects/POC_Product_Picker_Field__mdt/fields/Controlling_field__c.field-meta.xml
<CustomField>
    <fullName>Controlling_field__c</fullName>
    <label>Controlling field</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Type</fullName>
                <default>true</default>
                <label>Product Type</label>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>