force-app/main/default/objects/POC_Product_Picker_Field__mdt/fields/Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Api_Name__c</fullName>
    <label>Field Api Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>