force-app/main/default/objects/POC_Product_Picker_Field__mdt/fields/FieldLabel__c.field-meta.xml
<CustomField>
    <fullName>FieldLabel__c</fullName>
    <label>FieldLabel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>