force-app/main/default/objects/POC_Product_Picker_Field__mdt/fields/Parent_field_Condition__c.field-meta.xml
<CustomField>
    <fullName>Parent_field_Condition__c</fullName>
    <label>Parent field Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>