force-app/main/default/objects/POC_Product_Picker_Field__mdt/fields/Parent_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Parent_Metadata__c</fullName>
    <label>Parent Metadata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>