force-app/main/default/objects/POC_Product_Picker_Field__mdt/fields/POC_Product_Picker_Type__c.field-meta.xml
<CustomField>
    <fullName>POC_Product_Picker_Type__c</fullName>
    <label>POC Product Picker Type</label>
    <referenceTo>POC_Product_Picker_Type__mdt</referenceTo>
    <relationshipName>POC_Product_Picker_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>