force-app/main/default/objects/POC_Product_Picker_Field__mdt/listViews/all_values.listView-meta.xml
<ListView>
    <fullName>all_values</fullName>
    <columns>POC_Product_Picker_Type__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Field_Api_Name__c</columns>
    <columns>Order__c</columns>
    <columns>FieldLabel__c</columns>
    <filterScope>Everything</filterScope>
    <label>all values</label>
</ListView>